--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "temporary": "0.0.8"
   },
   "dependencies": {
+    "crypto": "0.0.3",
     "i": "^0.3.2",
     "lodash": "^2.4.1",
     "objectdiff": "^1.1.0",
