--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xcodeproj",
+  "name": "xcli",
   "version": "0.0.1",
   "description": "create and edit Xcode projects",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/phantasien/node-xcodeproj"
+    "url": "https://github.com/phantasien/xcli"
   },
   "keywords": [
     "xcode",
@@ -17,9 +17,9 @@
   "author": "David Corticchiato",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/phantasien/node-xcodeproj/issues"
+    "url": "https://github.com/phantasien/xcli/issues"
   },
-  "homepage": "https://github.com/phantasien/node-xcodeproj",
+  "homepage": "https://github.com/phantasien/xcli",
   "dependencies": {
     "pbxproj": "0.0.3"
   }
