--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "dependencies": {
     "async": "^0.9.0",
     "lodash": "^2.4.1",
+    "mkdirp": "^0.5.0",
     "pbxproj": "0.0.3",
     "streamify": "^0.2.4"
+  },
+  "devDependencies": {
+    "mocha": "^1.21.4"
   }
 }
