--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "homepage": "https://github.com/phantasien/xcli",
   "dependencies": {
     "async": "^0.9.0",
+    "commander": "2.3.0",
     "lodash": "^2.4.1",
     "mkdirp": "^0.5.0",
     "pbxproj": "0.0.3",
+    "replacestream": "^0.2.0",
     "streamify": "^0.2.4"
   },
   "devDependencies": {
-    "mocha": "^1.21.4"
+    "mocha": "^1.21.4",
+    "rimraf": "^2.2.8"
   }
 }
