--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "make test"
   },
+  "bin": {
+    "xcli": "./bin/xcli"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/phantasien/xcli"
