--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/phantasien/xcli",
   "dependencies": {
     "async": "^0.9.0",
-    "commander": "2.3.0",
+    "commander": "^2.3.0",
     "lodash": "^2.4.1",
     "mkdirp": "^0.5.0",
     "pbxproj": "0.0.3",
